@@ -1,3 +1,8 @@
+2018-10-06  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* chkdvifont.man, dvispc.man: New man pages.
+	* Makefile.am: Adjusted.
+
 2018-10-05  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
 
 	* dvispc.c: Exit code 0 when called without argument.
